[gd_scene load_steps=8 format=2]

[ext_resource path="res://gameplay/projectile/projectile.tscn" type="PackedScene" id=1]
[ext_resource path="res://gameplay/projectile/aa_shell.svg" type="Texture2D" id=2]
[ext_resource path="res://gameplay/projectile/anti_air_projectile.gd" type="Script" id=3]
[ext_resource path="res://gameplay/effect/smoke.tscn" type="PackedScene" id=4]
[ext_resource path="res://gameplay/effect/fragment_explosion.tscn" type="PackedScene" id=5]
[ext_resource path="res://gameplay/effect/gun14_a.wav" type="AudioStream" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 0.8 )

[node name="AntiAirProjectile" instance=ExtResource( 1 )]
collision_layer = 1040
collision_mask = 131
script = ExtResource( 3 )
base_damage = 20
radius = 20.0

[node name="CollisionShape2D" parent="." index="0"]
shape = SubResource( 1 )

[node name="Sprite2D" type="Sprite2D" parent="." index="1"]
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 2 )

[node name="Timer" type="Timer" parent="." index="2"]
one_shot = true
autostart = true

[node name="FragmentExplosion" parent="." index="3" instance=ExtResource( 5 )]

[node name="Smoke" parent="." index="4" instance=ExtResource( 4 )]
scale = Vector2( 0.4, 0.4 )
amount = 2
lifetime = 0.4
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="." index="5"]
stream = ExtResource( 6 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
